	target in 'syd/Makefile.am'.
2014-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SWITCHYARD_VERSION' define in 'common/config.h'.
2014-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the 'read_only' parameter for AdvServer in
	'common/adv_server.cpp'.
2014-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'SWITCYARD_SLOTS' define from 'common/config.h'.
2014-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.5.0.
2014-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Fixed varioous build system issues.
2014-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.5.1.
2014-07-03 Fred Gleason <fredg@paravelsystems.com>
	* Added 'src_meter' and 'dst_meter' public members to
	'Routing' in 'common/routing.cpp' and 'common/routing.h'.
	* Added 'Routing::srcMeterLevel()' and 'Routing::dstMeterLevel()'
	methods in 'common/routing.cpp' and 'common/routing.h'.
	* Added an 'AdvReader' class in 'common/adv_reader.cpp' and
	'common/adv_reader.h'.
2014-07-03 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.0.
2014-07-04 Fred Gleason <fredg@paravelsystems.com>
	* Split the 'int sock' argument in the RTP callback into
	'int read_sock,int write_sock' in 'common/rtp.cpp' and
	'common/rtp.h'.
2014-07-04 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.1.
2014-07-04 Fred Gleason <fredg@paravelsystems.com>
	* Got building working under OS X 13.2.0.
2014-07-07 Fred Gleason <fredg@paravelsystems.com>
	* Optimized 'Routing::LoadInterfaces()' to select 'en0' as the
	default interface under OS X.
2014-07-08 Fred Gleason <fredg@paravelsystems.com>
	* Refactored socket code in 'common/routing.cpp',
	'common/routing.h' and 'common/rtp.cpp' so as to handle
	subscriptions properly under OS X.
2014-07-08 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'configure.ac' that failed to detect certain
	versions of OS X.